2009-12-09  Raul Mateos  <raulofpandora@gmail.com>

	* images/god9.png: New image.

	* include/styles/menu.css: Added style for new menu item.

	* godmode/menu.php: New menu item.

	* godmode/reporting/map_builder.php: Updated internal links and title 
	because it will be a new entry in the menu.

	* operation/visual_console/render_view.php: Updated internal link for
	setup.

2009-12-09  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/reporting/map_builder.php: Changed H1 to H3, to maintain coherence.

	* operation/visual_console/render_view.php: Added title.

2009-12-09  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/reporting/reporting_builder.php: Print table of items only
	if the the tables has data, else print no items defined.

2009-12-09  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php: Test empty title report before on
	submit in javascript, and test empty this title in PHP.
	Fixes: 2910627

2009-12-09  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/db/db_info.php: Added icon to download database info.

	* include/style/tip.css: Removed unused style. Still help style is in
	the file. Not removed, maybe used some day...

	* operation/agentes/estado_grupo.php: Added colours to the numbers.
	Added the text "modules".

2009-12-09  Raul Mateos  <raulofpandora@gmail.com>

	* include/fgraph2.php: Deleted test file, never used. Will ezComponents
	graph be used someday...?

2009-12-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: in function "create_user_profile" add the
	parameter $assignUser to set assign user in table. And add the function
	"get_db_num_rows" that return the num of rows get from SQL. 
	
	* include/functions_api.php: add functions for new calls in the API,
	"set_new_user" create new user, "set_delete_user" delete a user,
	"set_add_user_profile" attach a user into group and profile,
	"set_delete_user_profile" deattach a user into group and profile,